--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sheyhealthy",
+  "name": "Vineet Doctor App",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,7 +15,7 @@
     "start": "node server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "",
+  "author": "Vineet Verma",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
