--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vineet Doctor App",
+  "name": "vineet-doctor-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
